<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  Labels  -->
    <string name="selecione">Selecione</string>
    <string name="cancelar">Cancelar</string>
    <string name="campo_obrigatorio">Este campo é obrigatório.</string>
    <string name="confirmar">Confirmar</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="negar">Negar</string>
    <string name="permitir">Permitir</string>
    <string name="agora_nao">Agora não</string>
    <string name="mais_x_segundos">Mais :arg0 segundos</string>
    <string name="comecar_agora">Começar agora</string>
    <string name="historico">Histórico</string>
    <string name="correr">Correr</string>
    <string name="perfil">Perfil</string>
    <string name="progresso">Progresso</string>
    <string name="escolha_sistema_medidas">Escolha o sistema de medidas</string>
    <string name="descricao_si_metrico">Métrico (cm, km, kg…)</string>
    <string name="descricao_si_imperial">Imperial (pol, mi, lb…)</string>
    <string name="conectar_parceiro">Conectar a um parceiro</string>
    <string name="aviso_bluetooth_inicio_atividade">Para iniciar uma atividade, é necessário conectar via Bluetooth ao smartphone de quem irá praticar com você</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="nao_perguntar_novamente">Não perguntar novamente</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="data_nascimento">Data de nascimento</string>
    <string name="kg" translatable="false">kg</string>
    <string name="cm" translatable="false">cm</string>
    <string name="m" translatable="false">m</string>
    <string name="km" translatable="false">km</string>
    <string name="km_h" translatable="false">km/h</string>
    <string name="lb" translatable="false">lb</string>
    <string name="polegadas">pol</string>
    <string name="pes">pés</string>
    <string name="yd" translatable="false">yd</string>
    <string name="mi" translatable="false">mi</string>
    <string name="mi_h" translatable="false">mi/h</string>
    <string name="bem_vindo_x">Seja bem-vindo(a), :arg0</string>
    <string name="permitir_localizacao">Permitir acesso à localização</string>
    <string name="permitir_bluetooth">Permitir acesso ao Bluetooth</string>
    <string name="informe_sobre_voce">Para realizar cálculos mais precisos, informe-nos um pouco sobre você</string>
    <string name="resutados_precisos_localizacao">Permitindo o acesso à sua localização, você terá resultados mais precisos quando realizar caminhada ou corridas</string>
    <string name="dobro_pontos_bluetooth">Permitindo o acesso ao Bluetooth, você poderá praticar atividades com um parceiro, dobrando seus pontos a cada atividade</string>
    <string name="distancia">Distância</string>
    <string name="duracao">Duração</string>
    <string name="velocidade_media">Vel. média</string>
    <string name="ritmo">Ritmo</string>
    <string name="min_km" translatable="false">/Km</string>
    <string name="min_mi" translatable="false">Min/Mi</string>
    <string name="calorias">Calorias</string>
    <string name="kcal" translatable="false">kcal</string>
    <string name="atividade_pausada">Atividade pausada</string>
    <string name="mantenha_pressionado_para_finalizar">Para finalizar a atividade, mantenha o botão pressionado.</string>
    <string name="pressione_para_finalizar">Para finalizar a atividade, pressione o botão rapidamente.</string>
    <string name="buscando_usuarios">Procurando por usuários, por favor aguarde…</string>
    <string name="online" translatable="false">Online</string>
    <string name="inicio">Início</string>
    <string name="fim">Fim</string>
    <string name="atividades">Atividades</string>
    <string name="conquistas">Conquistas</string>
    <string name="essa_semana">Essa semana</string>
    <string name="ultimos_x_dias">Últimos :arg0 dias</string>
    <string name="desde_o_inicio">Desde o início</string>
    <string name="x_voce_ja_correu">:arg0, você já percorreu</string>
    <string name="tempo_em_movimento">Tempo em movimento</string>
    <string name="percursos_em_dupla">Percursos em dupla</string>
    <string name="x_percursos_de_ate">:arg0 percursos, de :arg1 até :arg2</string>
    <string name="percurso_ao_lado_de">Você fez esse trajeto ao lado de</string>
    <string name="nivel">Nível</string>
    <string name="nivel_x">Nível :arg0</string>
    <string name="conquistado_em">Conquistado em</string>
    <string name="pontos_atual_vs_proximo" translatable="false">:arg0/:arg1 XP</string>
    <string name="x_xp" translatable="false">:arg0 XP</string>
    <string name="ainda_nao_fez_atividade">Você ainda não fez nenhuma atividade!</string>
    <string name="app_name" translatable="false">Trabalho de Conclusão de Curso</string>
    <string name="_0" translatable="false">0</string>
    <string name="ritmo_inicial" translatable="false">--:--</string>
    <string name="convites_de_atividade">Convites de atividade</string>
    <string name="parceiros_disponiveis">Usuários disponíveis</string>


    <!-- Níveis de progresso-->
    <string name="nivel_progresso_1">Bridgetown</string>
    <string name="nivel_progresso_2">Istambul</string>
    <string name="nivel_progresso_3">Bruxelas</string>
    <string name="nivel_progresso_4">Amsterdam</string>
    <string name="nivel_progresso_5">Macau</string>
    <string name="nivel_progresso_6">Auckland</string>
    <string name="nivel_progresso_7">Londres</string>
    <string name="nivel_progresso_8">Jakarta</string>
    <string name="nivel_progresso_9">Jerusalém</string>
    <string name="nivel_progresso_10">Hanói</string>
    <string name="nivel_progresso_11">Montevidéu</string>
    <string name="nivel_progresso_12">Honolulu</string>
    <string name="nivel_progresso_13">Atenas</string>
    <string name="nivel_progresso_14">Argel</string>
    <string name="nivel_progresso_15">Tegucigalpa</string>
    <string name="nivel_progresso_16">Bagdá</string>
    <string name="nivel_progresso_17">Moscou</string>
    <string name="nivel_progresso_18">Lisboa</string>
    <string name="nivel_progresso_19">Frankfurt</string>
    <string name="nivel_progresso_20">Bogotá</string>
    <string name="nivel_progresso_21">Praga</string>
    <string name="nivel_progresso_22">Paris</string>
    <string name="nivel_progresso_23">Dubai</string>
    <string name="nivel_progresso_24">Marraquexe</string>
    <string name="nivel_progresso_25">Lima</string>
    <string name="nivel_progresso_26">Budapeste</string>
    <string name="nivel_progresso_27">Oslo</string>
    <string name="nivel_progresso_28">Mumbai</string>
    <string name="nivel_progresso_29">Bucareste</string>
    <string name="nivel_progresso_30">Bangkok</string>
    <string name="nivel_progresso_31">Helsinque</string>
    <string name="nivel_progresso_32">Santiago</string>
    <string name="nivel_progresso_33">Taipei</string>
    <string name="nivel_progresso_34">Dublin</string>
    <string name="nivel_progresso_35">Copenhague</string>
    <string name="nivel_progresso_36">Cancun</string>
    <string name="nivel_progresso_37">Vilnius</string>
    <string name="nivel_progresso_38">Meca</string>
    <string name="nivel_progresso_39">Veneza</string>
    <string name="nivel_progresso_40">Seul</string>
    <string name="nivel_progresso_41">Estocolmo</string>
    <string name="nivel_progresso_42">Cairo</string>
    <string name="nivel_progresso_43">Viena</string>
    <string name="nivel_progresso_44">Vancouver</string>
    <string name="nivel_progresso_45">Sydney</string>
    <string name="nivel_progresso_46">Kyoto</string>
    <string name="nivel_progresso_47">Manila</string>
    <string name="nivel_progresso_48">Teerã</string>
    <string name="nivel_progresso_49">Kingston</string>
    <string name="nivel_progresso_50">Singapura</string>
    <string name="nivel_progresso_51">Florianópolis</string>
    <string name="nivel_progresso_52">Georgetown </string>
    <string name="nivel_progresso_53">Havana </string>
    <string name="nivel_progresso_54">Colombo</string>
    <string name="nivel_progresso_55">Varsóvia</string>
    <string name="nivel_progresso_56">Barcelona</string>

    <!--  API Keys  -->
    <string name="facebook_application_id" translatable="false">facebook_application_id</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb_login_protocol_scheme</string>
    <string name="map_api_key" translatable="false">map_api_key</string>


</resources>
